--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,12 +27,6 @@
   },
   "imports": [
     {
-      "path": "frontend/css/master.scss",
-      "imports": [
-        "frontend/css/style.scss"
-      ]
-    },
-    {
       "path": "css/master.scss",
       "imports": [
         "css/style.scss"
@@ -40,7 +34,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
@@ -81,7 +75,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7886,
+    "port": 7887,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -104,14 +98,14 @@
     "connectionType": "ftp",
     "remotePath": "",
     "uploadTimeout": 20000,
-    "uploadOnChange": false,
+    "uploadOnChange": true,
     "ftp": {
       "secure": false,
       "keepAlive": true,
-      "host": "",
+      "host": "ftp.heidework.com",
       "port": 21,
-      "user": "",
-      "password": ""
+      "user": "heidework.com",
+      "password": "px4z2n5h6s"
     },
     "sftp": {
       "host": "",
@@ -148,7 +142,110 @@
       "*.kit",
       "*.ts"
     ],
-    "history": []
+    "history": [
+      {
+        "file": "js/uikit.min.js",
+        "ctime": "2018-06-09T09:02:58.925Z",
+        "mtime": "2018-06-09T09:02:58.925Z",
+        "size": 0
+      },
+      {
+        "file": "kunder/kunde_info.php",
+        "ctime": "2018-06-09T09:02:57.690Z",
+        "mtime": "2018-06-05T21:32:17.000Z",
+        "size": 3160
+      },
+      {
+        "file": "kunder/kurv.php",
+        "ctime": "2018-06-09T09:02:57.769Z",
+        "mtime": "2018-06-05T21:53:18.000Z",
+        "size": 3203
+      },
+      {
+        "file": "kunde_billeder/1275457100058.jpg",
+        "ctime": "2018-06-09T09:02:57.894Z",
+        "mtime": "2018-06-05T21:38:35.000Z",
+        "size": 35716
+      },
+      {
+        "file": "kunde_billeder/1288010323309.png",
+        "ctime": "2018-06-09T09:02:58.070Z",
+        "mtime": "2018-06-05T20:12:45.000Z",
+        "size": 2933
+      },
+      {
+        "file": "kunde_billeder/9gFtYhs4xlpOyZDTBojP.jpg",
+        "ctime": "2018-06-09T09:02:58.232Z",
+        "mtime": "2018-06-05T21:39:11.000Z",
+        "size": 79211
+      },
+      {
+        "file": "kunde_billeder/billede.png",
+        "ctime": "2018-06-09T09:02:58.512Z",
+        "mtime": "2018-06-04T18:48:09.000Z",
+        "size": 510755
+      },
+      {
+        "file": "js/custom.js",
+        "ctime": "2018-06-09T09:02:58.656Z",
+        "mtime": "2018-06-03T14:50:12.000Z",
+        "size": 7307
+      },
+      {
+        "file": "js/uikit-icons.js",
+        "ctime": "2018-06-09T09:02:58.733Z",
+        "mtime": "2018-06-09T09:02:58.733Z",
+        "size": 0
+      },
+      {
+        "file": "js/uikit-icons.min.js",
+        "ctime": "2018-06-09T09:02:58.800Z",
+        "mtime": "2018-06-09T09:02:58.800Z",
+        "size": 0
+      },
+      {
+        "file": "includes/contact-email.php",
+        "ctime": "2018-06-09T09:02:59.103Z",
+        "mtime": "2018-06-09T09:02:59.103Z",
+        "size": 0
+      },
+      {
+        "file": "includes/footer.php",
+        "ctime": "2018-06-09T09:02:59.202Z",
+        "mtime": "2018-06-06T09:07:54.000Z",
+        "size": 2678
+      },
+      {
+        "file": "includes/sessions.php",
+        "ctime": "2018-06-09T09:02:59.270Z",
+        "mtime": "2018-06-09T09:02:59.270Z",
+        "size": 328
+      },
+      {
+        "file": "images/background.jpg",
+        "ctime": "2018-06-09T09:02:59.403Z",
+        "mtime": "2018-06-09T09:02:59.403Z",
+        "size": 864008
+      },
+      {
+        "file": "images/banner169.jpg",
+        "ctime": "2018-06-09T09:02:59.823Z",
+        "mtime": "2018-06-09T09:02:59.823Z",
+        "size": 0
+      },
+      {
+        "file": "login.php",
+        "ctime": "2018-06-09T09:07:15.101Z",
+        "mtime": "2018-06-04T18:14:56.000Z",
+        "size": 1646
+      },
+      {
+        "file": "backend/conn.php",
+        "ctime": "2018-06-09T09:07:28.778Z",
+        "mtime": "2018-06-09T09:07:28.778Z",
+        "size": 220
+      }
+    ]
   },
   "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
