--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,6 +6,10 @@
     {
       "path": "frontend/css/master.css",
       "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/master.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -34,7 +38,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -145,9 +149,9 @@
     "history": [
       {
         "file": "js/uikit.min.js",
-        "ctime": "2018-06-09T09:02:58.925Z",
-        "mtime": "2018-06-09T09:02:58.925Z",
-        "size": 0
+        "ctime": "2018-06-09T09:02:59.025Z",
+        "mtime": "2018-06-03T14:50:13.000Z",
+        "size": 125223
       },
       {
         "file": "kunder/kunde_info.php",
@@ -187,9 +191,9 @@
       },
       {
         "file": "js/custom.js",
-        "ctime": "2018-06-09T09:02:58.656Z",
-        "mtime": "2018-06-03T14:50:12.000Z",
-        "size": 7307
+        "ctime": "2018-06-09T14:54:55.117Z",
+        "mtime": "2018-06-09T14:54:55.117Z",
+        "size": 7269
       },
       {
         "file": "js/uikit-icons.js",
@@ -211,14 +215,14 @@
       },
       {
         "file": "includes/footer.php",
-        "ctime": "2018-06-09T09:02:59.202Z",
-        "mtime": "2018-06-06T09:07:54.000Z",
-        "size": 2678
+        "ctime": "2018-06-09T15:03:18.754Z",
+        "mtime": "2018-06-09T15:03:18.754Z",
+        "size": 2829
       },
       {
         "file": "includes/sessions.php",
-        "ctime": "2018-06-09T09:02:59.270Z",
-        "mtime": "2018-06-09T09:02:59.270Z",
+        "ctime": "2018-06-09T09:02:59.327Z",
+        "mtime": "2018-06-03T14:50:14.000Z",
         "size": 328
       },
       {
@@ -241,9 +245,105 @@
       },
       {
         "file": "backend/conn.php",
-        "ctime": "2018-06-09T09:07:28.778Z",
-        "mtime": "2018-06-09T09:07:28.778Z",
-        "size": 220
+        "ctime": "2018-06-09T09:13:24.931Z",
+        "mtime": "2018-06-09T09:13:24.931Z",
+        "size": 327
+      },
+      {
+        "file": "index.php",
+        "ctime": "2018-06-09T09:10:41.758Z",
+        "mtime": "2018-06-09T09:10:41.758Z",
+        "size": 3158
+      },
+      {
+        "file": "papir/index.php",
+        "ctime": "2018-06-09T09:12:26.273Z",
+        "mtime": "2018-06-09T09:12:26.273Z",
+        "size": 3151
+      },
+      {
+        "file": "papir/css/style.css",
+        "ctime": "2018-06-09T15:08:32.054Z",
+        "mtime": "2018-06-09T15:08:32.054Z",
+        "size": 18350
+      },
+      {
+        "file": "css/master.css",
+        "ctime": "2018-06-09T15:05:07.073Z",
+        "mtime": "2018-06-09T15:05:07.073Z",
+        "size": 295162
+      },
+      {
+        "file": "papir/css/uikit.css",
+        "ctime": "2018-06-09T09:19:43.901Z",
+        "mtime": "2018-06-09T09:19:43.892Z",
+        "size": 351108
+      },
+      {
+        "file": "tak.php",
+        "ctime": "2018-06-09T09:20:46.803Z",
+        "mtime": "2018-06-06T09:06:25.000Z",
+        "size": 555
+      },
+      {
+        "file": "css/lightslider.css",
+        "ctime": "2018-06-09T09:03:04.729Z",
+        "mtime": "2018-06-03T14:50:20.000Z",
+        "size": 7991
+      },
+      {
+        "file": "images/GILDAN_LOGO_blue.png",
+        "ctime": "2018-06-09T13:58:25.570Z",
+        "mtime": "2018-06-09T13:58:25.570Z",
+        "size": 19526
+      },
+      {
+        "file": "t-shirt.php",
+        "ctime": "2018-06-09T15:08:09.771Z",
+        "mtime": "2018-06-09T15:08:09.771Z",
+        "size": 8217
+      },
+      {
+        "file": "images/4090.png",
+        "ctime": "2018-06-09T14:24:50.111Z",
+        "mtime": "2018-06-09T14:24:50.050Z",
+        "size": 18904
+      },
+      {
+        "file": "images/bc-collection-logo.jpg",
+        "ctime": "2018-06-09T14:25:52.536Z",
+        "mtime": "2018-06-09T14:25:52.533Z",
+        "size": 41392
+      },
+      {
+        "file": "images/bc-collection-logo.png",
+        "ctime": "2018-06-09T14:26:49.936Z",
+        "mtime": "2018-06-09T14:26:49.934Z",
+        "size": 12946
+      },
+      {
+        "file": "images/frederik.jpg",
+        "ctime": "2018-06-09T09:03:00.515Z",
+        "mtime": "2018-06-03T14:50:15.000Z",
+        "size": 38617
+      },
+      {
+        "file": "images/logos/Stormtech-Performance-Logo.png",
+        "ctime": "2018-06-09T15:07:21.289Z",
+        "mtime": "2018-06-09T15:07:21.280Z",
+        "size": 18387
+      },
+      {
+        "file": "images/logos/GILDAN_LOGO_blue.png",
+        "ctime": "2018-06-09T15:07:51.727Z",
+        "mtime": "2018-06-09T15:07:33.132Z",
+        "size": 7013
+      },
+      {
+        "file": "images/logos/fruit-of-the-loom-logo.png",
+        "ctime": "2018-06-09T15:07:44.051Z",
+        "mtime": "2018-06-09T15:07:44.051Z",
+        "size": 169318
       }
     ]
   },
