--- a/prepros-6.config
+++ b/prepros-6.config
@@ -161,9 +161,9 @@
       },
       {
         "file": "kunder/kurv.php",
-        "ctime": "2018-06-09T09:02:57.769Z",
-        "mtime": "2018-06-05T21:53:18.000Z",
-        "size": 3203
+        "ctime": "2018-06-09T15:18:09.662Z",
+        "mtime": "2018-06-09T15:18:09.662Z",
+        "size": 3348
       },
       {
         "file": "kunde_billeder/1275457100058.jpg",
@@ -269,9 +269,9 @@
       },
       {
         "file": "css/master.css",
-        "ctime": "2018-06-09T15:05:07.073Z",
-        "mtime": "2018-06-09T15:05:07.073Z",
-        "size": 295162
+        "ctime": "2018-06-09T15:20:57.915Z",
+        "mtime": "2018-06-09T15:20:57.915Z",
+        "size": 295222
       },
       {
         "file": "papir/css/uikit.css",
@@ -299,9 +299,9 @@
       },
       {
         "file": "t-shirt.php",
-        "ctime": "2018-06-09T15:08:09.771Z",
-        "mtime": "2018-06-09T15:08:09.771Z",
-        "size": 8217
+        "ctime": "2018-06-09T15:14:22.795Z",
+        "mtime": "2018-06-09T15:14:22.795Z",
+        "size": 8538
       },
       {
         "file": "images/4090.png",
@@ -344,6 +344,30 @@
         "ctime": "2018-06-09T15:07:44.051Z",
         "mtime": "2018-06-09T15:07:44.051Z",
         "size": 169318
+      },
+      {
+        "file": "backend/functions.php",
+        "ctime": "2018-06-09T15:33:11.009Z",
+        "mtime": "2018-06-09T15:33:11.009Z",
+        "size": 3803
+      },
+      {
+        "file": "404.php",
+        "ctime": "2018-06-09T15:23:02.452Z",
+        "mtime": "2018-06-09T15:23:02.452Z",
+        "size": 598
+      },
+      {
+        "file": "papir/includes/header.php",
+        "ctime": "2018-06-09T15:30:06.907Z",
+        "mtime": "2018-06-09T15:30:06.907Z",
+        "size": 6101
+      },
+      {
+        "file": "includes/header.php",
+        "ctime": "2018-06-09T15:30:31.229Z",
+        "mtime": "2018-06-09T15:30:31.229Z",
+        "size": 6137
       }
     ]
   },
