Opdatering af betaling. Styling. Hoodie opdateret. Test.php added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -269,9 +269,9 @@
       },
       {
         "file": "css/master.css",
-        "ctime": "2018-06-11T19:41:43.713Z",
-        "mtime": "2018-06-11T19:41:43.713Z",
-        "size": 295753
+        "ctime": "2018-06-12T13:58:46.232Z",
+        "mtime": "2018-06-12T13:58:46.232Z",
+        "size": 295917
       },
       {
         "file": "papir/css/uikit.css",
@@ -377,9 +377,9 @@
       },
       {
         "file": "betaling.php",
-        "ctime": "2018-06-11T21:18:51.882Z",
-        "mtime": "2018-06-11T21:18:51.882Z",
-        "size": 1568
+        "ctime": "2018-06-12T14:13:32.877Z",
+        "mtime": "2018-06-12T14:13:32.877Z",
+        "size": 3233
       },
       {
         "file": "adminarea/textupdate.php",
@@ -494,6 +494,24 @@
         "ctime": "2018-06-10T16:00:01.852Z",
         "mtime": "2018-06-10T16:00:01.852Z",
         "size": 1365
+      },
+      {
+        "file": "min-side.php",
+        "ctime": "2018-06-12T13:22:19.792Z",
+        "mtime": "2018-06-05T21:08:24.000Z",
+        "size": 1060
+      },
+      {
+        "file": "kunder/kunde_form.php",
+        "ctime": "2018-06-12T13:34:15.414Z",
+        "mtime": "2018-06-12T13:34:15.414Z",
+        "size": 3612
+      },
+      {
+        "file": "css/uikit.css",
+        "ctime": "2018-06-09T09:03:04.977Z",
+        "mtime": "2018-06-03T14:50:20.000Z",
+        "size": 351108
       }
     ]
   },
