--- a/prepros-6.config
+++ b/prepros-6.config
@@ -161,9 +161,9 @@
       },
       {
         "file": "kunder/kurv.php",
-        "ctime": "2018-06-11T20:49:23.890Z",
-        "mtime": "2018-06-11T20:49:23.890Z",
-        "size": 3628
+        "ctime": "2018-06-13T20:55:34.466Z",
+        "mtime": "2018-06-12T20:38:54.000Z",
+        "size": 3516
       },
       {
         "file": "kunde_billeder/1275457100058.jpg",
@@ -191,9 +191,9 @@
       },
       {
         "file": "js/custom.js",
-        "ctime": "2018-06-10T11:59:24.937Z",
-        "mtime": "2018-06-10T11:59:24.937Z",
-        "size": 7355
+        "ctime": "2018-06-13T22:29:05.854Z",
+        "mtime": "2018-06-13T22:29:05.854Z",
+        "size": 7441
       },
       {
         "file": "js/uikit-icons.js",
@@ -215,13 +215,13 @@
       },
       {
         "file": "includes/footer.php",
-        "ctime": "2018-06-09T15:03:18.754Z",
-        "mtime": "2018-06-09T15:03:18.754Z",
-        "size": 2829
+        "ctime": "2018-06-14T11:33:54.148Z",
+        "mtime": "2018-06-14T11:33:54.148Z",
+        "size": 2779
       },
       {
         "file": "includes/sessions.php",
-        "ctime": "2018-06-09T09:02:59.327Z",
+        "ctime": "2018-06-13T20:55:36.713Z",
         "mtime": "2018-06-03T14:50:14.000Z",
         "size": 328
       },
@@ -251,9 +251,9 @@
       },
       {
         "file": "index.php",
-        "ctime": "2018-06-09T09:10:41.758Z",
-        "mtime": "2018-06-09T09:10:41.758Z",
-        "size": 3158
+        "ctime": "2018-06-14T11:07:14.090Z",
+        "mtime": "2018-06-14T11:07:14.090Z",
+        "size": 3154
       },
       {
         "file": "papir/index.php",
@@ -269,9 +269,9 @@
       },
       {
         "file": "css/master.css",
-        "ctime": "2018-06-12T13:58:46.232Z",
-        "mtime": "2018-06-12T13:58:46.232Z",
-        "size": 295917
+        "ctime": "2018-06-14T11:40:28.680Z",
+        "mtime": "2018-06-14T11:40:28.680Z",
+        "size": 296445
       },
       {
         "file": "papir/css/uikit.css",
@@ -281,7 +281,7 @@
       },
       {
         "file": "tak.php",
-        "ctime": "2018-06-09T09:20:46.803Z",
+        "ctime": "2018-06-13T20:55:15.939Z",
         "mtime": "2018-06-06T09:06:25.000Z",
         "size": 555
       },
@@ -299,9 +299,9 @@
       },
       {
         "file": "t-shirt.php",
-        "ctime": "2018-06-10T13:47:02.546Z",
-        "mtime": "2018-06-10T13:47:02.546Z",
-        "size": 9608
+        "ctime": "2018-06-13T22:37:24.232Z",
+        "mtime": "2018-06-13T22:37:24.232Z",
+        "size": 9570
       },
       {
         "file": "images/4090.png",
@@ -311,8 +311,8 @@
       },
       {
         "file": "images/bc-collection-logo.jpg",
-        "ctime": "2018-06-09T14:25:52.536Z",
-        "mtime": "2018-06-09T14:25:52.533Z",
+        "ctime": "2018-06-13T20:55:40.913Z",
+        "mtime": "2018-06-09T14:25:52.000Z",
         "size": 41392
       },
       {
@@ -329,8 +329,8 @@
       },
       {
         "file": "images/logos/Stormtech-Performance-Logo.png",
-        "ctime": "2018-06-09T15:07:21.289Z",
-        "mtime": "2018-06-09T15:07:21.280Z",
+        "ctime": "2018-06-13T20:55:42.577Z",
+        "mtime": "2018-06-09T15:07:21.000Z",
         "size": 18387
       },
       {
@@ -347,9 +347,9 @@
       },
       {
         "file": "backend/functions.php",
-        "ctime": "2018-06-11T19:32:42.829Z",
-        "mtime": "2018-06-11T19:32:42.829Z",
-        "size": 3923
+        "ctime": "2018-06-13T22:38:54.531Z",
+        "mtime": "2018-06-13T22:38:54.531Z",
+        "size": 3927
       },
       {
         "file": "404.php",
@@ -371,8 +371,8 @@
       },
       {
         "file": "checkout.php",
-        "ctime": "2018-06-11T19:31:31.899Z",
-        "mtime": "2018-06-11T19:31:31.899Z",
+        "ctime": "2018-06-13T22:37:54.368Z",
+        "mtime": "2018-06-11T19:31:31.000Z",
         "size": 834
       },
       {
@@ -461,8 +461,8 @@
       },
       {
         "file": "vendor/stripe/stripe-php/CHANGELOG.md",
-        "ctime": "2018-06-10T16:00:01.860Z",
-        "mtime": "2018-06-10T16:00:01.705Z",
+        "ctime": "2018-06-13T20:55:47.546Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
         "size": 17922
       },
       {
@@ -491,8 +491,8 @@
       },
       {
         "file": "vendor/stripe/stripe-php/tests/bootstrap.php",
-        "ctime": "2018-06-10T16:00:01.852Z",
-        "mtime": "2018-06-10T16:00:01.852Z",
+        "ctime": "2018-06-13T20:55:50.231Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
         "size": 1365
       },
       {
@@ -509,9 +509,159 @@
       },
       {
         "file": "css/uikit.css",
-        "ctime": "2018-06-09T09:03:04.977Z",
+        "ctime": "2018-06-13T20:55:16.994Z",
         "mtime": "2018-06-03T14:50:20.000Z",
         "size": 351108
+      },
+      {
+        "file": "kontakt.php",
+        "ctime": "2018-06-14T11:16:56.622Z",
+        "mtime": "2018-06-14T11:16:56.622Z",
+        "size": 2026
+      },
+      {
+        "file": "sitemap.php",
+        "ctime": "2018-06-13T22:05:20.245Z",
+        "mtime": "2018-06-03T14:50:23.000Z",
+        "size": 1666
+      },
+      {
+        "file": "hoodies.php",
+        "ctime": "2018-06-13T22:12:13.568Z",
+        "mtime": "2018-06-13T22:12:13.568Z",
+        "size": 8630
+      },
+      {
+        "file": "images/logoclose.png",
+        "ctime": "2018-06-13T20:55:36.240Z",
+        "mtime": "2018-06-03T14:50:16.000Z",
+        "size": 6079
+      },
+      {
+        "file": "images/skiltefp.png",
+        "ctime": "2018-06-13T20:55:35.922Z",
+        "mtime": "2018-06-03T14:50:18.000Z",
+        "size": 1180115
+      },
+      {
+        "file": "vendor/composer/autoload_real.php",
+        "ctime": "2018-06-13T20:55:44.367Z",
+        "mtime": "2018-06-10T16:00:02.000Z",
+        "size": 1762
+      },
+      {
+        "file": "vendor/composer/autoload_static.php",
+        "ctime": "2018-06-13T20:55:47.186Z",
+        "mtime": "2018-06-10T16:00:02.000Z",
+        "size": 827
+      },
+      {
+        "file": "vendor/stripe/stripe-php/update_certs.php",
+        "ctime": "2018-06-13T20:55:49.242Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 407
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/ApiResponse.php",
+        "ctime": "2018-06-13T20:55:50.597Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 549
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Balance.php",
+        "ctime": "2018-06-13T20:55:48.746Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 505
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Coupon.php",
+        "ctime": "2018-06-13T20:55:48.354Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 715
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Event.php",
+        "ctime": "2018-06-13T20:55:47.826Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 6781
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Recipient.php",
+        "ctime": "2018-06-13T20:55:49.466Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 1062
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Token.php",
+        "ctime": "2018-06-13T20:55:47.994Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 451
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/WebhookSignature.php",
+        "ctime": "2018-06-13T20:55:54.450Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 4236
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Error/OAuth/OAuthBase.php",
+        "ctime": "2018-06-13T20:57:06.270Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 474
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Util/RequestOptions.php",
+        "ctime": "2018-06-13T20:55:59.728Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 2872
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Util/Set.php",
+        "ctime": "2018-06-13T20:55:49.058Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 745
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/BalanceTransactionTest.php",
+        "ctime": "2018-06-13T20:57:12.135Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 770
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/CouponTest.php",
+        "ctime": "2018-06-13T20:56:00.051Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 2124
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/ExchangeRateTest.php",
+        "ctime": "2018-06-13T20:57:11.102Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 1397
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/OrderReturnTest.php",
+        "ctime": "2018-06-13T20:57:10.793Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 733
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/SourceTest.php",
+        "ctime": "2018-06-13T20:56:00.497Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 3697
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/TransferTest.php",
+        "ctime": "2018-06-13T20:57:06.653Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 4198
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/Util/UtilTest.php",
+        "ctime": "2018-06-13T20:57:10.036Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 2631
       }
     ]
   },
