--- a/prepros-6.config
+++ b/prepros-6.config
@@ -155,7 +155,7 @@
       },
       {
         "file": "kunder/kunde_info.php",
-        "ctime": "2018-06-09T09:02:57.690Z",
+        "ctime": "2018-06-15T11:21:58.492Z",
         "mtime": "2018-06-05T21:32:17.000Z",
         "size": 3160
       },
@@ -215,9 +215,9 @@
       },
       {
         "file": "includes/footer.php",
-        "ctime": "2018-06-14T11:33:54.148Z",
-        "mtime": "2018-06-14T11:33:54.148Z",
-        "size": 2779
+        "ctime": "2018-06-14T12:06:57.936Z",
+        "mtime": "2018-06-14T12:06:57.936Z",
+        "size": 3429
       },
       {
         "file": "includes/sessions.php",
@@ -239,20 +239,20 @@
       },
       {
         "file": "login.php",
-        "ctime": "2018-06-09T09:07:15.101Z",
-        "mtime": "2018-06-04T18:14:56.000Z",
-        "size": 1646
+        "ctime": "2018-06-14T13:00:53.448Z",
+        "mtime": "2018-06-14T13:00:53.448Z",
+        "size": 1650
       },
       {
         "file": "backend/conn.php",
-        "ctime": "2018-06-10T17:49:14.711Z",
-        "mtime": "2018-06-10T17:49:14.711Z",
+        "ctime": "2018-06-14T10:51:00.074Z",
+        "mtime": "2018-06-14T10:51:00.074Z",
         "size": 335
       },
       {
         "file": "index.php",
-        "ctime": "2018-06-14T11:07:14.090Z",
-        "mtime": "2018-06-14T11:07:14.090Z",
+        "ctime": "2018-06-14T11:52:32.605Z",
+        "mtime": "2018-06-14T11:52:32.605Z",
         "size": 3154
       },
       {
@@ -269,9 +269,9 @@
       },
       {
         "file": "css/master.css",
-        "ctime": "2018-06-14T11:40:28.680Z",
-        "mtime": "2018-06-14T11:40:28.680Z",
-        "size": 296445
+        "ctime": "2018-06-15T11:01:12.764Z",
+        "mtime": "2018-06-15T11:01:12.764Z",
+        "size": 296610
       },
       {
         "file": "papir/css/uikit.css",
@@ -287,7 +287,7 @@
       },
       {
         "file": "css/lightslider.css",
-        "ctime": "2018-06-09T09:03:04.729Z",
+        "ctime": "2018-06-13T23:02:15.361Z",
         "mtime": "2018-06-03T14:50:20.000Z",
         "size": 7991
       },
@@ -299,8 +299,8 @@
       },
       {
         "file": "t-shirt.php",
-        "ctime": "2018-06-13T22:37:24.232Z",
-        "mtime": "2018-06-13T22:37:24.232Z",
+        "ctime": "2018-06-13T23:01:45.029Z",
+        "mtime": "2018-06-13T22:37:24.000Z",
         "size": 9570
       },
       {
@@ -323,7 +323,7 @@
       },
       {
         "file": "images/frederik.jpg",
-        "ctime": "2018-06-09T09:03:00.515Z",
+        "ctime": "2018-06-13T23:02:15.647Z",
         "mtime": "2018-06-03T14:50:15.000Z",
         "size": 38617
       },
@@ -347,9 +347,9 @@
       },
       {
         "file": "backend/functions.php",
-        "ctime": "2018-06-13T22:38:54.531Z",
-        "mtime": "2018-06-13T22:38:54.531Z",
-        "size": 3927
+        "ctime": "2018-06-15T11:19:11.507Z",
+        "mtime": "2018-06-15T11:19:11.507Z",
+        "size": 4235
       },
       {
         "file": "404.php",
@@ -365,9 +365,9 @@
       },
       {
         "file": "includes/header.php",
-        "ctime": "2018-06-10T14:39:48.303Z",
-        "mtime": "2018-06-10T14:39:48.303Z",
-        "size": 6139
+        "ctime": "2018-06-15T11:05:41.562Z",
+        "mtime": "2018-06-15T11:05:41.562Z",
+        "size": 6396
       },
       {
         "file": "checkout.php",
@@ -383,13 +383,13 @@
       },
       {
         "file": "adminarea/textupdate.php",
-        "ctime": "2018-06-10T17:53:18.389Z",
+        "ctime": "2018-06-13T23:02:19.985Z",
         "mtime": "2018-06-03T14:50:22.000Z",
         "size": 407
       },
       {
         "file": "backend/textupdate.php",
-        "ctime": "2018-06-10T17:53:28.178Z",
+        "ctime": "2018-06-13T23:02:19.614Z",
         "mtime": "2018-06-03T14:50:21.000Z",
         "size": 488
       },
@@ -401,9 +401,9 @@
       },
       {
         "file": "charge.php",
-        "ctime": "2018-06-11T19:00:31.782Z",
-        "mtime": "2018-06-11T19:00:31.782Z",
-        "size": 418
+        "ctime": "2018-06-15T11:49:53.313Z",
+        "mtime": "2018-06-15T11:49:53.313Z",
+        "size": 1740
       },
       {
         "file": "kunde_billeder/130625143475.jpg",
@@ -419,7 +419,7 @@
       },
       {
         "file": "adminarea/admin-area.php",
-        "ctime": "2018-06-10T17:54:00.930Z",
+        "ctime": "2018-06-13T23:02:19.912Z",
         "mtime": "2018-06-03T14:50:21.000Z",
         "size": 2315
       },
@@ -497,19 +497,19 @@
       },
       {
         "file": "min-side.php",
-        "ctime": "2018-06-12T13:22:19.792Z",
-        "mtime": "2018-06-05T21:08:24.000Z",
-        "size": 1060
+        "ctime": "2018-06-15T11:08:42.173Z",
+        "mtime": "2018-06-15T11:08:42.173Z",
+        "size": 1145
       },
       {
         "file": "kunder/kunde_form.php",
-        "ctime": "2018-06-12T13:34:15.414Z",
-        "mtime": "2018-06-12T13:34:15.414Z",
-        "size": 3612
+        "ctime": "2018-06-15T11:22:39.845Z",
+        "mtime": "2018-06-15T11:22:39.845Z",
+        "size": 3666
       },
       {
         "file": "css/uikit.css",
-        "ctime": "2018-06-13T20:55:16.994Z",
+        "ctime": "2018-06-13T23:02:11.827Z",
         "mtime": "2018-06-03T14:50:20.000Z",
         "size": 351108
       },
@@ -527,9 +527,9 @@
       },
       {
         "file": "hoodies.php",
-        "ctime": "2018-06-13T22:12:13.568Z",
-        "mtime": "2018-06-13T22:12:13.568Z",
-        "size": 8630
+        "ctime": "2018-06-14T13:03:25.980Z",
+        "mtime": "2018-06-14T13:03:25.980Z",
+        "size": 8782
       },
       {
         "file": "images/logoclose.png",
@@ -557,7 +557,7 @@
       },
       {
         "file": "vendor/stripe/stripe-php/update_certs.php",
-        "ctime": "2018-06-13T20:55:49.242Z",
+        "ctime": "2018-06-13T23:02:28.096Z",
         "mtime": "2018-06-10T16:00:01.000Z",
         "size": 407
       },
@@ -611,7 +611,7 @@
       },
       {
         "file": "vendor/stripe/stripe-php/lib/Util/RequestOptions.php",
-        "ctime": "2018-06-13T20:55:59.728Z",
+        "ctime": "2018-06-13T23:02:32.351Z",
         "mtime": "2018-06-10T16:00:01.000Z",
         "size": 2872
       },
@@ -662,6 +662,114 @@
         "ctime": "2018-06-13T20:57:10.036Z",
         "mtime": "2018-06-10T16:00:01.000Z",
         "size": 2631
+      },
+      {
+        "file": "adminarea/footeradmin.php",
+        "ctime": "2018-06-13T23:02:20.122Z",
+        "mtime": "2018-06-03T14:50:22.000Z",
+        "size": 2520
+      },
+      {
+        "file": "adminarea/getposts.php",
+        "ctime": "2018-06-13T23:02:19.564Z",
+        "mtime": "2018-06-03T14:50:22.000Z",
+        "size": 459
+      },
+      {
+        "file": "adminarea/headeradmin.php",
+        "ctime": "2018-06-14T13:00:45.753Z",
+        "mtime": "2018-06-14T13:00:45.753Z",
+        "size": 5858
+      },
+      {
+        "file": "adminarea/logudadmins.php",
+        "ctime": "2018-06-13T23:02:20.237Z",
+        "mtime": "2018-06-03T14:50:22.000Z",
+        "size": 91
+      },
+      {
+        "file": "backend/kunde-login.php",
+        "ctime": "2018-06-13T23:02:19.753Z",
+        "mtime": "2018-06-03T14:50:21.000Z",
+        "size": 1170
+      },
+      {
+        "file": "backend/kunde-signup.php",
+        "ctime": "2018-06-13T23:02:20.039Z",
+        "mtime": "2018-06-04T18:16:15.000Z",
+        "size": 1429
+      },
+      {
+        "file": "backend/log-in.php",
+        "ctime": "2018-06-13T23:02:13.954Z",
+        "mtime": "2018-06-03T14:50:21.000Z",
+        "size": 1268
+      },
+      {
+        "file": "backend/sign-up.php",
+        "ctime": "2018-06-13T23:02:15.190Z",
+        "mtime": "2018-06-03T14:50:21.000Z",
+        "size": 1694
+      },
+      {
+        "file": "images/controls.png",
+        "ctime": "2018-06-13T23:02:15.543Z",
+        "mtime": "2018-06-03T14:50:14.000Z",
+        "size": 2241
+      },
+      {
+        "file": "vendor/stripe/stripe-php/lib/Util/RandomGenerator.php",
+        "ctime": "2018-06-13T23:02:33.081Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 800
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/PlanTest.php",
+        "ctime": "2018-06-13T23:02:31.900Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 2098
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/RecipientTest.php",
+        "ctime": "2018-06-13T23:02:55.774Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 2505
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/StripeTest.php",
+        "ctime": "2018-06-13T23:02:32.671Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 576
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/Stripe/WebhookTest.php",
+        "ctime": "2018-06-13T23:02:33.384Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 3983
+      },
+      {
+        "file": "vendor/stripe/stripe-php/tests/TestCase.php",
+        "ctime": "2018-06-13T23:02:28.249Z",
+        "mtime": "2018-06-10T16:00:01.000Z",
+        "size": 6354
+      },
+      {
+        "file": "images/tside.jpg",
+        "ctime": "2018-06-13T23:02:12.660Z",
+        "mtime": "2018-06-03T14:50:19.000Z",
+        "size": 46144
+      },
+      {
+        "file": "admin-login.php",
+        "ctime": "2018-06-14T13:00:56.468Z",
+        "mtime": "2018-06-05T20:29:29.000Z",
+        "size": 1285
+      },
+      {
+        "file": "test.php",
+        "ctime": "2018-06-15T11:44:56.130Z",
+        "mtime": "2018-06-15T11:44:56.130Z",
+        "size": 1325
       }
     ]
   },
